--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 #--------------------------------------------------------------------------------
 # Values for this workshop - EDIT THIS SECTION.
 #--------------------------------------------------------------------------------
-workshop_repo   : "http://github.com/openastronomy/Workshop-2016-09-12"
-workshop_site   : "http://openastronomy.org/Workshop-2016-09-12"
+workshop_repo   : "http://github.com/openastronomy/workshop-2016-09-12"
+workshop_site   : "http://openastronomy.org/workshop-2016-09-12"
 #--------------------------------------------------------------------------------
 # Standard Software Carpentry settings - should not need to be modified.
 #--------------------------------------------------------------------------------
